# nsnake

./: .gitignore  README.md  pyproject.toml
src/: learning.ipynb  main.py  model.ipynb  model.py  utils.py
src/PygameSnakeApp/: App.py  AppNN.py  AppToPlay.py  __init__.py
src/SnakeGame/: Board.py  Snake.py
tests/: test_winnable.py
